objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Inquiry</fullName>
        <description>Support process for Inquiries cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Product Support Process</fullName>
        <description>Support process for product support cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Backup_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the assigned support rep when case owner is away — for support use only.</description>
        <inlineHelpText>Who is the assigned support rep when case owner is away?</inlineHelpText>
        <label>Backup Agent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User does not exist or is not a support user.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Support User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bug_Number__c</fullName>
        <description>track the bug or error number reported by the customer</description>
        <inlineHelpText>Enter the bug or error number related to the customer&apos;s issue.</inlineHelpText>
        <label>Bug Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMDT1__c</fullName>
        <formula>$CustomMetadata.Profiles__mdt.Sales.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMDT1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Setting__c</fullName>
        <formula>$Setup.Custom_Rule__c.Run_Validation_Rule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>CasesToOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>list of products that the customer might be using</description>
        <inlineHelpText>Enter the product that most relates to the customer&apos;s issue.</inlineHelpText>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Laptop</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <formula>$Profile.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Cases_on_Inquiry_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases on Inquiry Queue</label>
        <queue>Inquiry_Queue</queue>
        <sharedTo>
            <group>Global_Sales_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_on_Product_Support_1_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases on Product Support 1 Queue</label>
        <queue>Product_Support_Tier_1_Queue</queue>
        <sharedTo>
            <group>Global_Sales_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_on_Product_Support_2_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases on Product Support 2 Queue</label>
        <queue>Product_Support_Tier_2_Queue</queue>
        <sharedTo>
            <group>VPs</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Priority_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.PRIORITY</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <label>Priority Cases</label>
        <sharedTo>
            <group>Global_Sales_Reps</group>
            <role>APAC_Sales_Director</role>
            <roleAndSubordinates>APAC_Sales_Rep</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Test</label>
        <sharedTo>
            <role>APAC_Sales_Rep</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Inquiry</fullName>
        <active>true</active>
        <businessProcess>Inquiry</businessProcess>
        <description>Record type for inquiries.</description>
        <label>Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Support</fullName>
        <active>true</active>
        <businessProcess>Product Support Process</businessProcess>
        <description>Record type for product support</description>
        <label>Product Support</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Limit_Priority</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     /* $Profile.Name =     Nome da profile  
     $CustomMetadata.Profiles__mdt.Sales.ProfileName__c  , /* CMDT com os nomes das profiles a serem &quot;barradas&quot; */ 
     
     RecordType.DeveloperName = &quot;Inquiry&quot;,  /* Nome do record type */
     $Setup.Custom_Rule__c.Run_Validation_Rule__c, /* Nome do Usuario ou Profile para ignorar a Validation Rule */ 
     CASE( Priority, 
           &quot;Medium&quot;, 1,
           &quot;High&quot;, 1,
           0)
           = 1
         )</errorConditionFormula>
        <errorDisplayField>Priority</errorDisplayField>
        <errorMessage>Priority must be lower than Medium and High</errorMessage>
    </validationRules>
</CustomObject>